--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:id="@+id/searchitem"
+    android:layout_marginTop="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_height="match_parent">
+
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
@@ -16,30 +14,41 @@
             android:layout_gravity="start"
             android:layout_marginStart="20dp"
             android:src="@mipmap/ic_launcher" />
-        <LinearLayout
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_marginStart="20dp"
+            android:layout_height="wrap_content"
+            android:text="@string/name"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
 
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/name"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-            <TextView
-                android:id="@+id/login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-               android:text="@string/Login"
-                android:layout_marginTop="10dp"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/Login"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/icnstar"
+        android:layout_width="9dp"
+        android:layout_height="64dp"
+        android:layout_gravity="end"
+        android:layout_weight="1"
+        android:src="@android:drawable/star_big_off" />
+
 
 </LinearLayout>
