--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="postModel" type="com.e.demoaplplication.bean.PostModel" />
+
+    </data>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:id="@+id/searchitem"
@@ -13,7 +19,7 @@
             android:layout_height="100dp"
             android:layout_gravity="start"
             android:layout_marginStart="20dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@{postModel.avatarUrl}" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,7 +33,7 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/name"
+            android:text="@{postModel.name}"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
 
@@ -36,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/Login"
+            android:text="@{postModel.login}"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
 
@@ -52,3 +58,4 @@
 
 
 </LinearLayout>
+</layout>
